--- a/Punjab.html
+++ b/Punjab.html
@@ -269,7 +269,7 @@
   <script>
     const data = [
       { name: "Amritsar", city: "Amritsar", img: "Images/Img1.jpg", info: "Home to the iconic Golden Temple and Jallianwala Bagh.", link: "Amritsar.html" },
-      { name: "Chandigarh", city: "Chandigarh", img: "images/chd1 (1).jpg", info: "India’s cleanest and most planned capital city.", link: "Chandigarh.html" },
+      { name: "Chandigarh", city: "Chandigarh", img: "images/Chandigarh.jpg", info: "India’s cleanest and most planned capital city.", link: "Chandigarh.html" },
       { name: "Ludhiana", city: "Ludhiana", img: "Images/img2.jpg", info: "Industrial hub and vibrant culture.", link: "Ludhiana.html" },
       { name: "Jalandhar", city: "Jalandhar", img: "Images/Jalandhar.jpg", info: "City of sports goods and rich heritage.", link: "Jalandhar.html" },
       { name: "Patiala", city: "Patiala", img: "Images/patiala.jpg", info: "Royal palaces, gardens, and the famous Patiala peg.", link: "Patiala.html" },
