--- a/index.html
+++ b/index.html
@@ -1,217 +1,204 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        body {
-            background-color: #000000;
-        }
-        #menu {
-            background: #000000;
-            height: 66px;
-            padding-right: 18px;
-            border-radius: 5px;
-        }
-        #menu ul, #menu li {
-            margin: 0 auto;
-            padding: 0;
-            list-style: none
-        }
-        #menu ul {
-            width: 100%;
-            text-align: right;
-            margin-top: 20px;
-        }
-        #menu li {
-            display: inline-block;
-            position: relative;
-            margin-right: 30px;
-        }
-        #menu a {
-            display: block;
-            line-height: 66px;
-            padding: 0 14px;
-            text-decoration: none;
-            color: #FFFFFF;
-            font-size: 17px;
-        }
-        #menu a.dropdown-arrow:after {
-            content: "\2B9F";
-            margin-left: 5px;
-        }
-        #menu li a:hover {
-            color: #09EFFF;
-            background: #000000;
-        }
-        #menu input {
-            display: none;
-            margin: 0;
-            padding: 0;
-            height: 66px;
-            width: 100%;
-            opacity: 0;
-            cursor: pointer
-        }
-        #menu label {
-            display: none;
-            line-height: 66px;
-            text-align: center;
-            position: absolute;
-            left: 35px
-        }
-        #menu label:before {
-            font-size: 1.6em;
-            color: #FFFFFF;
-            content: "\2261"; 
-            margin-left: 20px;
-        }
-        #menu ul.sub-menus{
-            height: auto;
-            overflow: hidden;
-            width: 170px;
-            background: #343434;
-            position: absolute;
-            z-index: 99;
-            display: none;
-        }
-        #menu ul.sub-menus li {
-            display: block;
-            text-align: left;
-            width: 100%;
-        }
-        #menu ul.sub-menus a {
-            color: #FFFFFF;
-            font-size: 15px;
-        }
-        #menu li:hover ul.sub-menus {
-            display: block
-        }
-        #menu ul.sub-menus a:hover{
-            background: #000000;
-            color: #09EFFF;
-        }
-        @media screen and (max-width: 800px){
-            #menu {position:relative}
-            #menu ul {background:#343434;position:absolute;top:100%;right:0;left:0;z-index:3;height:auto;display:none;text-align:left;}
-            #menu ul.sub-menus {width:100%;position:static;}
-            #menu ul.sub-menus a {padding-left:30px;}
-            #menu li {display:block;float:none;width:auto;}
-            #menu input, #menu label {position:absolute;top:0;left:0;display:block}
-            #menu input {z-index:4}
-            #menu input:checked + label {color:#FFFFFF}
-            #menu input:checked + label:before {content:"\00d7"}
-            #menu input:checked ~ ul {display:block}
-        }
-        img {
-            height: 50px;
-            width: 50px;
-            border-radius: 50%;
-            margin-right: 690px;
-            margin-top: 10px;
-            margin-left: 25px;
-        }
-        .logo p {
-            color: #ffffff;
-        }
-        .header {
-            background-color: #000000;
-            display: flex;
-            flex: 6fr;
-            padding: 0 20px;
-        }
-        .logo {
-            display: grid;
-            grid: 2fr;
-            color: #ffffff;
-            width: 750px;
-            margin-left: 20px;
-        }
-        .content {
-            color: #ffffff;
-            margin: 150px;
-            font-family:'Times New Roman', Times, serif;
-            font-size: 20px;
-            display: flex;
-            flex: 6fr;
-            gap: 150px;
-        }
-        .content h1 {
-            font-size: 60px;
-            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-            width: 500px;
-        }
-        #af {
-            color: #09EFFF;
-        }
-        /* .hero {
-            display: flex;
-            flex: 6fr;
-        } */
-        .hero-image img {
-        width: 280px;
-        height: 280px;
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Explore Bharat</title>
+<style>
+    body {
+        background-color: #000000;
+        margin: 0;
+        font-family: Arial, sans-serif;
+    }
+    /* HEADER */
+    .header {
+        background-color: #000000;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 5px 15px;
+        flex-wrap: wrap;
+    }
+    .logo {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+    }
+    .logo img {
+        height: 50px;
+        width: 50px;
+        border-radius: 50%;
+    }
+    .logo p {
+        color: #ffffff;
+        font-size: 18px;
+        margin: 0;
+    }
+
+    /* MENU */
+    #menu {
+        background: #000000;
+        border-radius: 5px;
+    }
+    #menu ul, #menu li {
+        margin: 0;
+        padding: 0;
+        list-style: none;
+    }
+    #menu ul {
+        display: flex;
+        gap: 20px;
+        align-items: center;
+    }
+    #menu li {
+        position: relative;
+    }
+    #menu a {
+        text-decoration: none;
+        color: #FFFFFF;
+        font-size: 16px;
+        padding: 10px;
+    }
+    #menu a.dropdown-arrow:after {
+        content: "\2B9F";
+        margin-left: 5px;
+    }
+    #menu li a:hover {
+        color: #09EFFF;
+    }
+    #menu ul.sub-menus {
+        display: none;
+        position: absolute;
+        background: #343434;
+        width: 170px;
+        z-index: 99;
+    }
+    #menu ul.sub-menus li {
+        display: block;
+    }
+    #menu ul.sub-menus a {
+        display: block;
+        padding: 8px 12px;
+    }
+    #menu li:hover ul.sub-menus {
+        display: block;
+    }
+
+    /* HERO SECTION */
+    .content {
+        color: #ffffff;
+        padding: 50px 20px;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 40px;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+    }
+    .content h1 {
+        font-size: 50px;
+    }
+    #af {
+        color: #09EFFF;
+    }
+    .content h3 {
+        font-weight: normal;
+        font-size: 18px;
+    }
+    .hero-image img {
+        width: 250px;
+        height: 250px;
         object-fit: cover;
         border-radius: 50%;
         border: 8px solid #09EFFF;
-        box-shadow: 0 0 60px #09EFFF;
-        margin-left: 200px;
+        box-shadow: 0 0 40px #09EFFF;
+    }
+
+    /* FOOTER */
+    footer {
+        text-align: center;
+        color: #ffffff;
+        padding: 20px;
+        font-size: 14px;
+    }
+
+    /* MOBILE RESPONSIVE */
+    @media screen and (max-width: 800px) {
+        #menu ul {
+            flex-direction: column;
+            background: #343434;
+            display: none;
+            padding: 10px;
         }
-        input[type="text"] {
-        padding: 10px;
-        width: 300px;
-        font-size: 16px;
+        #menu input, #menu label {
+            display: block;
         }
-        button {
-        padding: 10px 20px;
-        font-size: 16px;
+        #menu label {
+            cursor: pointer;
+            font-size: 24px;
+            color: #FFFFFF;
         }
-    </style>
+        #menu input:checked ~ ul {
+            display: flex;
+        }
+        .content {
+            flex-direction: column;
+            text-align: center;
+            gap: 20px;
+        }
+        .content h1 {
+            font-size: 36px;
+        }
+        .hero-image img {
+            width: 200px;
+            height: 200px;
+        }
+    }
+</style>
 </head>
 <body>
-    <div class="header">  
+    <div class="header">
         <div class="logo">
             <img src="Images/sample.jpg" alt="Logo">
             <p>Explore Bharat</p>
         </div>
-        <nav id='menu'>
-        <input type='checkbox' id='responsive-menu' onclick='updatemenu()'><label></label>
-        <ul>
-            <li><a href='index.html'>Home</a></li>
-            <li><a href='About.html'>About</a></li>
-            <li><a href='Contact.html'>Contact Us</a></li>
-            <li><a href='HeritageSites.html'>Heritage Sites</a></li>
-            <li><a class='dropdown-arrow' href='ExploreStates.html'>Explore States</a>
-            <ul class='sub-menus'>
-                <li><a href='Maharashtra.html'>Maharashtra</a></li>
-                <li><a href='Rajasthan.html'>Rajasthan</a></li>
-                <li><a href='Goa.html'>Goa</a></li>
-                <li><a href='Uttarakhand.html'>Uttarakhand</a></li>
-                <li><a href='Punjab.html'>Punjab</a></li>
-                <li><a href='Delhi.html'>Delhi</a></li>
-                <li><a href='Gujrat.html'>Gujrat</a></li>
+        <nav id="menu">
+            <input type="checkbox" id="menu-toggle">
+            <label for="menu-toggle">&#9776;</label>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="About.html">About</a></li>
+                <li><a href="Contact.html">Contact Us</a></li>
+                <li><a href="HeritageSites.html">Heritage Sites</a></li>
+                <li>
+                    <a class="dropdown-arrow" href="ExploreStates.html">Explore States</a>
+                    <ul class="sub-menus">
+                        <li><a href="Maharashtra.html">Maharashtra</a></li>
+                        <li><a href="Rajasthan.html">Rajasthan</a></li>
+                        <li><a href="Goa.html">Goa</a></li>
+                        <li><a href="Uttarakhand.html">Uttarakhand</a></li>
+                        <li><a href="Punjab.html">Punjab</a></li>
+                        <li><a href="Delhi.html">Delhi</a></li>
+                        <li><a href="Gujrat.html">Gujrat</a></li>
+                    </ul>
+                </li>
             </ul>
-            </li>
-        </ul>
         </nav>
     </div>
-    <hr>
-      <section class="hero">
-    <div class="content">
-        <div class="hero-text">
-            <h1><span id = "af">E</span>xplore <span id = "af">B</span>harat</h1>
-            <h3>~Unlock the secrets of <span id = "af">ancient forts</span>, <span id = "af">majestic palaces</span>, and <span id = "af">streets</span>.<br><i id = "af"><b>India</b></i> is waiting — are you ready to explore?</h3>
-        </div>
-        <div class="hero-image">
-            <div class="img-bg">
-                <img src="Images/logo.jpg">
+    <section class="hero">
+        <div class="content">
+            <div class="hero-text">
+                <h1><span id="af">E</span>xplore <span id="af">B</span>harat</h1>
+                <h3>~Unlock the secrets of <span id="af">ancient forts</span>, <span id="af">majestic palaces</span>, and <span id="af">streets</span>.<br>
+                    <i id="af"><b>India</b></i> is waiting — are you ready to explore?</h3>
+            </div>
+            <div class="hero-image">
+                <img src="Images/logo.jpg" alt="Hero Image">
             </div>
         </div>
-    </div>
-      </section>
+    </section>
     <footer>
-        <p style="text-align: center; color: #ffffff; margin-top: 50px;">&copy; 2025 Explore Bharat. All rights reserved.</p>
+        <p>&copy; 2023 Explore Bharat. All rights reserved.</p>
     </footer>
 </body>
 </html>
