--- a/Architectural Work of Le Corbusier.html
+++ b/Architectural Work of Le Corbusier.html
@@ -12,6 +12,32 @@
       background-size: cover;
       color: #fff;
     }
+    @media screen and (max-width: 800px) {
+  .cards-section {
+    grid-template-columns: 1fr; /* Single column on mobile */
+    padding: 20px;
+    margin: 0; /* Remove big left/right margins */
+    gap: 20px;
+  }
+  .place-card {
+    width: 100%; /* Make card fit screen width */
+    height: auto; /* Let height adjust naturally */
+  }
+  .header {
+    flex-direction: column; /* Stack logo & menu */
+    align-items: center;
+  }
+  .logo {
+    width: auto;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .header img {
+    margin: 10px 0;
+  }
+}
 
     .overlay {
       background-color: rgba(0, 0, 0, 0.8);
@@ -170,3 +196,4 @@
   </div>
 </body>
 </html>
+
