--- a/Contact.html
+++ b/Contact.html
@@ -1,151 +1,192 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        body {
-            background-color: #000000;
-        }
-        #menu {
-            background: #000000;
-            height: 66px;
-            padding-right: 18px;
-            border-radius: 5px;
-        }
-        #menu ul, #menu li {
-            margin: 0 auto;
-            padding: 0;
-            list-style: none
-        }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Contact Us</title>
+<style>
+    body {
+        background-color: #000;
+        margin: 0;
+        font-family: Arial, sans-serif;
+    }
+    /* Header & Menu */
+    #menu {
+        background: #000;
+        height: 66px;
+        padding-right: 18px;
+        border-radius: 5px;
+    }
+    #menu ul, #menu li {
+        margin: 0 auto;
+        padding: 0;
+        list-style: none;
+    }
+    #menu ul {
+        width: 100%;
+        text-align: right;
+        margin-top: 20px;
+    }
+    #menu li {
+        display: inline-block;
+        position: relative;
+        margin-right: 30px;
+    }
+    #menu a {
+        display: block;
+        line-height: 66px;
+        padding: 0 14px;
+        text-decoration: none;
+        color: #fff;
+        font-size: 17px;
+    }
+    #menu a.dropdown-arrow:after {
+        content: "\2B9F";
+        margin-left: 5px;
+    }
+    #menu li a:hover {
+        color: #09EFFF;
+        background: #000;
+    }
+    #menu input {
+        display: none;
+    }
+    #menu label {
+        display: none;
+        line-height: 66px;
+        text-align: center;
+        position: absolute;
+        left: 35px;
+    }
+    #menu label:before {
+        font-size: 1.6em;
+        color: #fff;
+        content: "\2261";
+        margin-left: 20px;
+    }
+    #menu ul.sub-menus {
+        height: auto;
+        overflow: hidden;
+        width: 170px;
+        background: #343434;
+        position: absolute;
+        z-index: 99;
+        display: none;
+    }
+    #menu ul.sub-menus li {
+        display: block;
+        text-align: left;
+        width: 100%;
+    }
+    #menu ul.sub-menus a {
+        color: #fff;
+        font-size: 15px;
+    }
+    #menu li:hover ul.sub-menus {
+        display: block;
+    }
+    #menu ul.sub-menus a:hover {
+        background: #000;
+        color: #09EFFF;
+    }
+
+    /* Responsive Menu */
+    @media screen and (max-width: 800px) {
+        #menu { position: relative; }
         #menu ul {
-            width: 100%;
-            text-align: right;
-            margin-top: 20px;
-        }
-        #menu li {
-            display: inline-block;
-            position: relative;
-            margin-right: 30px;
-        }
-        #menu a {
-            display: block;
-            line-height: 66px;
-            padding: 0 14px;
-            text-decoration: none;
-            color: #FFFFFF;
-            font-size: 17px;
-        }
-        #menu a.dropdown-arrow:after {
-            content: "\2B9F";
-            margin-left: 5px;
-        }
-        #menu li a:hover {
-            color: #09EFFF;
-            background: #000000;
-        }
-        #menu input {
-            display: none;
-            margin: 0;
-            padding: 0;
-            height: 66px;
-            width: 100%;
-            opacity: 0;
-            cursor: pointer
-        }
-        #menu label {
-            display: none;
-            line-height: 66px;
-            text-align: center;
-            position: absolute;
-            left: 35px
-        }
-        #menu label:before {
-            font-size: 1.6em;
-            color: #FFFFFF;
-            content: "\2261"; 
-            margin-left: 20px;
-        }
-        #menu ul.sub-menus{
-            height: auto;
-            overflow: hidden;
-            width: 170px;
             background: #343434;
             position: absolute;
-            z-index: 99;
+            top: 100%;
+            right: 0;
+            left: 0;
+            z-index: 3;
+            height: auto;
             display: none;
-        }
-        #menu ul.sub-menus li {
-            display: block;
             text-align: left;
-            width: 100%;
         }
-        #menu ul.sub-menus a {
-            color: #FFFFFF;
-            font-size: 15px;
-        }
-        #menu li:hover ul.sub-menus {
-            display: block
-        }
-        #menu ul.sub-menus a:hover{
-            background: #000000;
-            color: #09EFFF;
-        }
-        @media screen and (max-width: 800px){
-            #menu {position:relative}
-            #menu ul {background:#343434;position:absolute;top:100%;right:0;left:0;z-index:3;height:auto;display:none;text-align:left;}
-            #menu ul.sub-menus {width:100%;position:static;}
-            #menu ul.sub-menus a {padding-left:30px;}
-            #menu li {display:block;float:none;width:auto;}
-            #menu input, #menu label {position:absolute;top:0;left:0;display:block}
-            #menu input {z-index:4}
-            #menu input:checked + label {color:#FFFFFF}
-            #menu input:checked + label:before {content:"\00d7"}
-            #menu input:checked ~ ul {display:block}
-        }
-        img {
-            height: 50px;
-            width: 50px;
-            border-radius: 50%;
-            margin-right: 690px;
-            margin-top: 10px;
-            margin-left: 25px;
-        }
-        .logo p {
-            color: #ffffff;
-        }
-        .header {
-            background-color: #000000;
-            display: flex;
-            flex: 6fr;
-            padding: 0 20px;
-        }
-        .logo {
-            display: grid;
-            grid: 2fr;
-            color: #ffffff;
-            width: 750px;
-            margin-left: 20px;
-        }
-        .content {
-            color: #ffffff;
-            margin: 150px;
-            font-family:'Times New Roman', Times, serif;
-            font-size: 20px;
-            display: flex;
-            flex: 6fr;
-            gap: 150px;
-        }
-        .content h1 {
-            font-size: 60px;
-            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-            width: 500px;
-        }
-        #af {
-            color: #09EFFF;
-        }
-    </style>
+        #menu ul.sub-menus { width: 100%; position: static; }
+        #menu ul.sub-menus a { padding-left: 30px; }
+        #menu li { display: block; float: none; width: auto; margin-right: 0; }
+        #menu input, #menu label { position: absolute; top: 0; left: 0; display: block; }
+        #menu input { z-index: 4; opacity: 0; width: 50px; height: 66px; cursor: pointer; }
+        #menu label { z-index: 3; }
+        #menu input:checked + label:before { content: "\00d7"; }
+        #menu input:checked ~ ul { display: block; }
+    }
+
+    /* Logo & Header */
+    img {
+        height: 50px;
+        width: 50px;
+        border-radius: 50%;
+        margin-top: 10px;
+        margin-left: 25px;
+    }
+    .logo p {
+        color: #fff;
+        margin: 5px 0 0 0;
+    }
+    .header {
+        background-color: #000;
+        display: flex;
+        align-items: center;
+        padding: 0 20px;
+        flex-wrap: wrap;
+    }
+    .logo {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        margin-right: auto;
+    }
+
+    /* Contact Section */
+    .contactus {
+        background: #111;
+        padding: 20px;
+        border-radius: 8px;
+        max-width: 500px;
+        width: 90%;
+    }
+    .contactus h2 {
+        color: #09EFFF;
+        text-align: center;
+    }
+    .contactus label {
+        color: #fff;
+        display: block;
+        margin-top: 10px;
+    }
+    .contactus input, .contactus textarea {
+        width: 100%;
+        margin-top: 5px;
+        margin-bottom: 15px;
+        padding: 10px;
+        border: none;
+        border-radius: 4px;
+        font-size: 14px;
+    }
+    .contactus button {
+        background-color: #09EFFF;
+        color: #000;
+        border: none;
+        border-radius: 4px;
+        padding: 10px 15px;
+        cursor: pointer;
+        font-weight: bold;
+    }
+    .contactus button:hover {
+        background-color: #07cde0;
+    }
+
+    /* Footer */
+    footer {
+        text-align: center;
+        color: #fff;
+        padding: 20px;
+        margin-top: 40px;
+    }
+</style>
 </head>
 <body>
     <div class="header">  
@@ -154,42 +195,45 @@
             <p>Explore Bharat</p>
         </div>
         <nav id='menu'>
-        <input type='checkbox' id='responsive-menu' onclick='updatemenu()'><label></label>
-        <ul>
-            <li><a href='index.html'>Home</a></li>
-            <li><a href='About.html'>About</a></li>
-            <li><a href='Contact.html'>Contact Us</a></li>
-            <li><a href='HeritageSites.html'>Heritage Sites</a></li>
-            <li><a class='dropdown-arrow' href='ExploreStates.html'>Explore States</a>
-            <ul class='sub-menus'>
-                <li><a href='Maharashtra.html'>Maharashtra</a></li>
-                <li><a href='Rajasthan.html'>Rajasthan</a></li>
-                <li><a href='Goa.html'>Goa</a></li>
-                <li><a href='Uttarakhand.html'>Uttarakhand</a></li>
-                <li><a href='Punjab.html'>Punjab</a></li>
-                <li><a href='Delhi.html'>Delhi</a></li>
-                <li><a href='Gujrat.html'>Gujrat</a></li>
+            <input type='checkbox' id='responsive-menu'><label for='responsive-menu'></label>
+            <ul>
+                <li><a href='index.html'>Home</a></li>
+                <li><a href='About.html'>About</a></li>
+                <li><a href='Contact.html'>Contact Us</a></li>
+                <li><a href='HeritageSites.html'>Heritage Sites</a></li>
+                <li><a class='dropdown-arrow' href='ExploreStates.html'>Explore States</a>
+                    <ul class='sub-menus'>
+                        <li><a href='Maharashtra.html'>Maharashtra</a></li>
+                        <li><a href='Rajasthan.html'>Rajasthan</a></li>
+                        <li><a href='Goa.html'>Goa</a></li>
+                        <li><a href='Uttarakhand.html'>Uttarakhand</a></li>
+                        <li><a href='Punjab.html'>Punjab</a></li>
+                        <li><a href='Delhi.html'>Delhi</a></li>
+                        <li><a href='Gujrat.html'>Gujrat</a></li>
+                    </ul>
+                </li>
             </ul>
-            </li>
-        </ul>
         </nav>
     </div>
     <hr>
-      <section class="hero">ection class="hero">
-    <center><div class="contactus">
-        <h2>Contact Us</h2>
-        <form action="#" method="post" style="max-width: 500px; margin: 30px 0;">
-            <label for="name" style="color: #ffffff;">Name:</label><br>
-            <input type="text" id="name" name="name" required style="width: 100%; margin-bottom: 15px;"><br>
-            <label for="email" style="color: #ffffff;">Email:</label><br>
-            <input type="email" id="email" name="email" required style="width: 100%; margin-bottom: 15px;"><br>
-            <label for="message" style="color: #ffffff;">Message:</label><br>
-            <textarea id="message" name="message" rows="5" required style="width: 100%; margin-bottom: 15px;"></textarea><br>
-            <button type="submit" style="background-color: #09EFFF; color: #000; border: none; border-radius: 4px;">Send</button>
-        </form>
-    </div></center>
+    <section class="hero">
+        <center>
+            <div class="contactus">
+                <h2>Contact Us</h2>
+                <form action="#" method="post">
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" name="name" required>
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" required>
+                    <label for="message">Message:</label>
+                    <textarea id="message" name="message" rows="5" required></textarea>
+                    <button type="submit">Send</button>
+                </form>
+            </div>
+        </center>
+    </section>
     <footer>
-        <p style="text-align: center; color: #ffffff; margin-top: 50px;">&copy; 2025 Explore Bharat. All rights reserved.</p>
+        <p>&copy; 2025 Explore Bharat. All rights reserved.</p>
     </footer>
 </body>
 </html>
