--- a/Uttarakhand.html
+++ b/Uttarakhand.html
@@ -193,13 +193,13 @@
 
   <script>
     const data = [
-      { name: "Dehradun", city: "Dehradun", img: "Images/Dehradun.jpg", info: "Capital city nestled in the Doon Valley.", link: "dehradun.html" },
-      { name: "Haridwar", city: "Haridwar", img: "Images/Haridwar.webp", info: "Famous for Ganga Aarti and spiritual energy.", link: "haridwar.html" },
-      { name: "Rishikesh", city: "Rishikesh", img: "Images/Rishikesh.jpg", info: "Yoga capital of the world by the Ganges.", link: "rishikesh.html" },
-      { name: "Nainital", city: "Nainital", img: "Images/Nainital.jpg", info: "Scenic lake town surrounded by hills.", link: "nainital.html" },
-      { name: "Mussoorie", city: "Mussoorie", img: "Images/Mussoorie.pg.jpg", info: "Queen of Hills with colonial charm.", link: "mussoorie.html" },
-      { name: "Badrinath", city: "Badrinath", img: "Images/Badrinath.jpg", info: "One of the Char Dham pilgrimage sites.", link: "badrinath.html" },
-      { name: "Kedarnath", city: "Kedarnath", img: "Images/Kedarnath.jpg", info: "Sacred shrine of Lord Shiva in the Himalayas.", link: "kedarnath.html" },
+      { name: "Dehradun", city: "Dehradun", img: "Images/Dehradun.jpg", info: "Capital city nestled in the Doon Valley.", link: "Dehradun.html" },
+      { name: "Haridwar", city: "Haridwar", img: "Images/Haridwar.webp", info: "Famous for Ganga Aarti and spiritual energy.", link: "Haridwar.html" },
+      { name: "Rishikesh", city: "Rishikesh", img: "Images/Rishikesh.jpg", info: "Yoga capital of the world by the Ganges.", link: "Rishikesh.html" },
+      { name: "Nainital", city: "Nainital", img: "Images/Nainital.jpg", info: "Scenic lake town surrounded by hills.", link: "Nainital.html" },
+      { name: "Mussoorie", city: "Mussoorie", img: "Images/Mussoorie.pg.jpg", info: "Queen of Hills with colonial charm.", link: "Mussoorie.html" },
+      { name: "Badrinath", city: "Badrinath", img: "Images/Badrinath.jpg", info: "One of the Char Dham pilgrimage sites.", link: "Badrinath.html" },
+      { name: "Kedarnath", city: "Kedarnath", img: "Images/Kedarnath.jpg", info: "Sacred shrine of Lord Shiva in the Himalayas.", link: "Kedarnath.html" },
       { name: "Almora", city: "Almora", img: "Images/almora.jpg", info: "Cultural hub with mesmerizing views.", link: "almora.html" }
     ];
 
@@ -235,4 +235,5 @@
     displayCards();
   </script>
 </body>
+
 </html>
