--- a/Ahmedabad.html
+++ b/Ahmedabad.html
@@ -283,17 +283,321 @@
         <p>~A city of textiles, temples, and timeless charm.</p>
     </section>
 
-    <div class="cards-section" id="heritage-cards">
-        <!-- All place-card divs go here (same as your original content) -->
-        <!-- Example card -->
-        <div class="place-card">
+    <div class="place-card">
             <img src="Images/SabarmatiAshram.webp" alt="Sabarmati Ashram">
             <h3>Sabarmati Ashram: The Heart of the Freedom Struggle</h3>
             <p>
                 Sabarmati Ashram, also known as Gandhi Ashram, is a historic site that served as the residence of Mahatma Gandhi.
+                <br>
+                <b>Fun Fact:</b>
+                <br>~It was from here that Gandhi launched the Salt March in 1930!
+                <b>Things to Explore at Sabarmati Ashram:</b>
+                <ul>
+                    <li>
+                        The Main Building:
+                        <br>Visit the main building where Gandhi lived and worked, now a museum showcasing his life and teachings.
+                    </li>
+                    <li>
+                        The Library:
+                        <br>Explore the library containing a vast collection of books on Gandhian philosophy and history.
+                    </li>
+                    <li>
+                        The Peace Garden:
+                        <br>Stroll through the serene gardens that reflect Gandhi’s love for nature and simplicity.
+                    </li>
+                    <li>
+                        The Exhibition Halls:
+                        <br>Discover various exhibitions that depict the freedom struggle and Gandhi’s role in it.
+                    </li>
+                    <li>
+                        The Dandi March Path:
+                        <br>Walk along the path taken by Gandhi during the historic Dandi March.
+                    </li>
+                </ul>
+                <br><b>Why Visit Sabarmati Ashram?</b>
+                <br>!Because it’s a place of inspiration, peace, and a reminder of India’s struggle for independence!
             </p>
         </div>
-        <!-- Add the rest of your cards here -->
+        <div class="place-card">
+            <img src="Images/KankariaLake.jpg" alt="Kankaria Lake">
+            <h3>Kankaria Lake: A Serene Escape in the City</h3>
+            <p>
+                Kankaria Lake is a beautiful artificial lake surrounded by a picturesque park, offering a perfect escape from the city’s hustle and bustle.
+                <br>
+                <b>Fun Fact:</b>
+                <br>~It was built in the 15th century and is one of the largest lakes in Ahmedabad!
+                <b>Things to Explore at Kankaria Lake:</b>
+                <ul>
+                    <li>
+                        The Lakefront:
+                        <br>Take a leisurely stroll along the lakefront, enjoying the serene views and fresh air.
+                    </li>
+                    <li>
+                        The Zoo:
+                        <br>Visit the Kankaria Zoo, home to a variety of animals and birds.
+                    </li>
+                    <li>
+                        The Balloon Ride:
+                        <br>Experience a hot air balloon ride for a bird’s eye view of the lake and its surroundings.
+                    </li>
+                    <li>
+                        The Amusement Park:
+                        <br>Enjoy various rides and attractions at the amusement park located near the lake.
+                    </li>
+                    <li>
+                        The Food Stalls:
+                        <br>Savor local delicacies at the food stalls lining the lake.
+                    </li>
+                </ul>
+                <br><b>Why Visit Kankaria Lake?</b>
+                <br>!Because it’s a perfect spot for relaxation, recreation, and enjoying nature in the heart of the city!
+            </p>
+        </div>
+        <div class="place-card">
+            <img src="Images/JamaMasjidAhmedabad.jpg" alt="Jama Masjid">
+            <h3>Jama Masjid: A Testament to Mughal Architecture</h3>
+            <p>
+                Jama Masjid is one of the largest mosques in India, known for its stunning architecture and historical significance.
+                <br>
+                <b>Fun Fact:</b>
+                <br>~It was built in the 15th century by Sultan Ahmed Shah, the founder of Ahmedabad!
+                <b>Things to Explore at Jama Masjid:</b>
+                <ul>
+                    <li>
+                        The Main Prayer Hall:
+                        <br>Admire the intricately carved pillars and domes in the main prayer hall.
+                    </li>
+                    <li>
+                        The Courtyard:
+                        <br>Explore the vast courtyard that can accommodate thousands of worshippers.
+                    </li>
+                    <li>
+                        The Minarets:
+                        <br>Climb the minarets for a panoramic view of the city.
+                    </li>
+                    <li>
+                        The Surrounding Market:
+                        <br>Visit the bustling market surrounding the mosque, offering a variety of goods and local delicacies.
+                    </li>
+                    <li>
+                        The Historical Significance:
+                        <br>Learn about the mosque’s history and its role in the city’s cultural heritage.
+                    </li>
+                </ul>
+                <br><b>Why Visit Jama Masjid?</b>
+                <br>!Because it’s a masterpiece of Mughal architecture and a symbol of Ahmedabad’s rich history!
+            </p>
+        </div>
+        <div class="place-card">
+            <img src="Images/SarkhejRoza.jpg" alt="Sarkhej Roza">
+            <h3>Sarkhej Roza: A Blend of Islamic and Hindu Architecture</h3>
+            <p>
+                Sarkhej Roza is a complex of tombs and mosques, known for its unique blend of Islamic and Hindu architectural styles.
+                <br>
+                <b>Fun Fact:</b>
+                <br>~It was built in the 15th century and is often referred to as the ‘Acropolis of Ahmedabad’!
+                <b>Things to Explore at Sarkhej Roza:</b>
+                <ul>
+                    <li>
+                        The Main Tomb:
+                        <br>Visit the tomb of Sultan Ahmed Shah, adorned with intricate carvings and beautiful arches.
+                    </li>
+                    <li>
+                        The Mosque:
+                        <br>Explore the mosque with its stunning minarets and serene ambiance.
+                    </li>
+                    <li>
+                        The Stepwell:
+                        <br>Discover the ancient stepwell that reflects the architectural brilliance of the era.
+                    </li>
+                    <li>
+                        The Gardens:
+                        <br>Stroll through the lush gardens that surround the complex, offering a peaceful retreat.
+                    </li>
+                    <li>
+                        The Historical Significance:
+                        <br>Learn about the historical importance of Sarkhej Roza in the context of Ahmedabad’s heritage.
+                    </li>
+                </ul>
+                <br><b>Why Visit Sarkhej Roza?</b>
+                <br>!Because it’s a serene place that showcases the rich cultural fusion of Ahmedabad!
+            </p>
+        </div>
+        <div class="place-card">
+            <img src="Images/HutheesingJainTemple.jpg" alt="Hutheesing Jain Temple">
+            <h3>Hutheesing Jain Temple: A Jewel of Jain Architecture</h3>
+            <p>
+                Hutheesing Jain Temple is a stunning example of Jain architecture, known for its intricate carvings and serene ambiance.
+                <br>
+                <b>Fun Fact:</b>
+                <br>~It was built in the 19th century and is dedicated to Dharmanatha, the fifteenth Tirthankara!
+                <b>Things to Explore at Hutheesing Jain Temple:</b>
+                <ul>
+                    <li>
+                        The Main Shrine:
+                        <br>Admire the beautifully carved marble pillars and the main shrine dedicated to Dharmanatha.
+                    </li>
+                    <li>
+                        The Courtyard:
+                        <br>Explore the peaceful courtyard surrounded by intricately carved walls.
+                    </li>
+                    <li>
+                        The Sculptures:
+                        <br>Marvel at the exquisite sculptures depicting various Jain Tirthankaras and celestial beings.
+                    </li>
+                    <li>
+                        The Historical Significance:
+                        <br>Learn about the temple’s history and its significance in the Jain community.
+                    </li>
+                    <li>
+                        The Spiritual Ambiance:
+                        <br>Experience the serene atmosphere that makes it a perfect place for meditation and reflection.
+                    </li>
+                </ul>
+                <br><b>Why Visit Hutheesing Jain Temple?</b>
+                <br>!Because it’s a masterpiece of Jain architecture and a place of spiritual tranquility!
+            </p>
+        </div>
+        <div class="place-card">
+            <img src="Images/VastrapurLake.jpg" alt="Vastrapur Lake">
+            <h3>Vastrapur Lake: A Tranquil Oasis in the City</h3>
+            <p>
+                Vastrapur Lake is a serene lake surrounded by a beautiful park, offering a perfect spot for relaxation and leisure.
+                <br>
+                <b>Fun Fact:</b>
+                <br>~It was developed in the 1980s and has become a popular recreational spot for locals!
+                <b>Things to Explore at Vastrapur Lake:</b>
+                <ul>
+                    <li>
+                        The Walking Path:
+                        <br>Take a leisurely walk along the well-maintained walking path around the lake.
+                    </li>
+                    <li>
+                        The Boating Facility:
+                        <br>Enjoy boating on the calm waters of the lake, surrounded by lush greenery.
+                    </li>
+                    <li>
+                        The Children’s Park:
+                        <br>Let your kids have fun at the children’s park located near the lake.
+                    </li>
+                    <li>
+                        The Food Stalls:
+                        <br>Savor local snacks and refreshments at the food stalls around the lake.
+                    </li>
+                    <li>
+                        The Scenic Views:
+                        <br>Relax and enjoy the scenic views of the lake, especially during sunset!
+                    </li>
+                </ul>
+                <br><b>Why Visit Vastrapur Lake?</b>
+                <br>!Because it’s a peaceful retreat in the heart of the city, perfect for unwinding and enjoying nature!
+            </p>
+        </div>
+        <div class="place-card">
+            <img src="Images/CalicoMuseum.jpg" alt="Calico Museum of Textiles">
+            <h3>Calico Museum of Textiles: A Textile Wonderland</h3>
+            <p>
+                Calico Museum of Textiles is a renowned museum that showcases the rich textile heritage of India.
+                <br>
+                <b>Fun Fact:</b>
+                <br>~It houses one of the finest collections of textiles in the world, dating back to the 15th century!
+                <b>Things to Explore at Calico Museum:</b>
+                <ul>
+                    <li>
+                        The Textile Gallery:
+                        <br>Explore the extensive collection of textiles, including rare fabrics, garments, and tapestries.
+                    </li>
+                    <li>
+                        The Weaving Demonstrations:
+                        <br>Watch live demonstrations of traditional weaving techniques by skilled artisans.
+                    </li>
+                    <li>
+                        The Historical Significance:
+                        <br>Learn about the history and evolution of Indian textiles through informative exhibits.
+                    </li>
+                    <li>
+                        The Architectural Beauty:
+                        <br>Admire the beautiful architecture of the museum building, which reflects traditional Indian styles.
+                    </li>
+                    <li>
+                        The Cultural Heritage:
+                        <br>Discover the cultural significance of textiles in Indian society and their role in various traditions!
+                    </li>
+                </ul>
+                <br><b>Why Visit Calico Museum?</b>
+                <br>!Because it’s a treasure trove for textile enthusiasts and a glimpse into India’s rich cultural heritage!
+            </p>
+        </div>
+        <div class="place-card">
+            <img src="Images/ScienceCityAhmedabad.jpg" alt="Science City">
+            <h3>Science City: A Fun Learning Experience</h3>
+            <p>
+                Science City is an educational and entertainment complex that offers a fun learning experience for all ages.
+                <br>
+                <b>Fun Fact:</b>
+                <br>~It is one of the largest science centers in India, promoting science and technology education!
+                <b>Things to Explore at Science City:</b>
+                <ul>
+                    <li>
+                        The Space Capsule:
+                        <br>Experience a simulated space journey in the state-of-the-art space capsule.
+                    </li>
+                    <li>
+                        The Dinosaur Park:
+                        <br>Explore life-sized dinosaur models and learn about prehistoric creatures.
+                    </li>
+                    <li>
+                        The Science Museum:
+                        <br>Discover various scientific principles through interactive exhibits and displays.
+                    </li>
+                    <li>
+                        The IMAX Theater:
+                        <br>Watch educational films in the immersive IMAX theater.
+                    </li>
+                    <li>
+                        The Outdoor Activities:
+                        <br>Enjoy various outdoor activities, including a ropeway and a boating facility!
+                    </li>
+                </ul>
+                <br><b>Why Visit Science City?</b>
+                <br>!Because it’s a perfect blend of education and entertainment, making science fun for everyone!
+            </p>
+        </div>
+        <div class="place-card">
+            <img src="Images/ManekChowk.jpg" alt="Manek Chowk">
+            <h3>Manek Chowk: A Food Lover’s Paradise</h3>
+            <p>
+                Manek Chowk is a bustling market and food hub, known for its vibrant atmosphere and delicious street food.
+                <br>
+                <b>Fun Fact:</b>
+                <br>~It transforms into a lively night market, offering a variety of local delicacies!
+                <b>Things to Explore at Manek Chowk:</b>
+                <ul>
+                    <li>
+                        The Street Food Stalls:
+                        <br>Indulge in a variety of mouth-watering street foods, including Dhokla, Kachori, and more.
+                    </li>
+                    <li>
+                        The Shopping Experience:
+                        <br>Shop for local handicrafts, jewelry, and souvenirs at the bustling market stalls.
+                    </li>
+                    <li>
+                        The Night Market:
+                        <br>Experience the vibrant night market atmosphere with colorful lights and lively crowds.
+                    </li>
+                    <li>
+                        The Cultural Significance:
+                        <br>Learn about the historical importance of Manek Chowk in Ahmedabad’s cultural landscape.
+                    </li>
+                    <li>
+                        The Local Vibe:
+                        <br>Immerse yourself in the local culture and enjoy the lively ambiance of this iconic market!
+                    </li>
+                </ul>
+                <br><b>Why Visit Manek Chowk?</b>
+                <br>!Because it’s a food lover’s paradise, offering a delightful culinary journey through Ahmedabad’s street food scene!
+            </p>
+        </div>
     </div>
 
     <footer class="footer">
@@ -301,3 +605,4 @@
     </footer>
 </body>
 </html>
+
