--- a/Ahmedabad.html
+++ b/Ahmedabad.html
@@ -1,173 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ahmedabad - Explore Bharat</title>
-    <style>
-        body {
-            background-color: #000000;
-            color: #ffffff;
-            margin: 0;
-            font-family: system-ui, sans-serif;
-        }
-        /* Navigation */
-        #menu {
-            background: #000000;
-            height: 66px;
-            padding-right: 18px;
-            border-radius: 5px;
-        }
-        #menu ul, #menu li {
-            margin: 0 auto;
-            padding: 0;
-            list-style: none;
-        }
-        #menu ul {
-            width: 100%;
-            text-align: right;
-            margin-top: 20px;
-        }
-        #menu li {
-            display: inline-block;
-            position: relative;
-        }
-        #menu a {
-            display: block;
-            line-height: 66px;
-            padding: 0 28px;
-            text-decoration: none;
-            color: #FFFFFF;
-            font-size: 17px;
-        }
-        #menu a.dropdown-arrow:after {
-            content: "\2B9F";
-            margin-left: 5px;
-        }
-        #menu li a:hover {
-            color: #09EFFF;
-            background: #000000;
-        }
-        #menu input {
-            display: none;
-            margin: 0;
-            padding: 0;
-            height: 66px;
-            width: 100%;
-            opacity: 0;
-            cursor: pointer;
-        }
-        #menu label {
-            display: none;
-            line-height: 66px;
-            text-align: center;
-            position: absolute;
-            left: 35px;
-        }
-        #menu label:before {
-            font-size: 1.6em;
-            color: #FFFFFF;
-            content: "\2261"; 
-            margin-left: 20px;
-        }
-        #menu ul.sub-menus {
-            height: auto;
-            overflow: hidden;
-            width: 170px;
-            background: #343434;
-            position: absolute;
-            z-index: 99;
-            display: none;
-        }
-        #menu ul.sub-menus li {
-            display: block;
-            text-align: left;
-            width: 100%;
-        }
-        #menu ul.sub-menus a {
-            color: #FFFFFF;
-            font-size: 15px;
-        }
-        #menu li:hover ul.sub-menus {
-            display: block;
-        }
-        #menu ul.sub-menus a:hover {
-            background: #000000;
-            color: #09EFFF;
-        }
-        /* Mobile menu */
-        @media screen and (max-width: 800px) {
-            #menu {position: relative;}
-            #menu ul {
-                background: #343434;
-                position: absolute;
-                top: 100%;
-                right: 0;
-                left: 0;
-                z-index: 3;
-                height: auto;
-                display: none;
-                text-align: left;
-            }
-            #menu ul.sub-menus {width: 100%; position: static;}
-            #menu ul.sub-menus a {padding-left: 30px;}
-            #menu li {display: block; float: none; width: auto;}
-            #menu input, #menu label {position: absolute; top: 0; left: 0; display: block;}
-            #menu input {z-index: 4;}
-            #menu input:checked + label {color: #FFFFFF;}
-            #menu input:checked + label:before {content: "\00d7";}
-            #menu input:checked ~ ul {display: block;}
-        }
+<style>
+    body {
+        background-color: #000000;
+        color: #ffffff;
+        margin: 0;
+        font-family: system-ui, sans-serif;
+    }
 
-        /* Header */
-        .header {
-            background-color: #000000;
-            display: flex;
-            align-items: center;
-            padding: 0 20px;
-            flex-wrap: wrap;
-        }
-        .logo {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            flex: 1;
-        }
-        .logo img {
-            height: 50px;
-            width: 50px;
-            border-radius: 50%;
-        }
-        .logo p {
-            color: #ffffff;
-            margin: 0;
-            font-size: 1.2em;
-            font-weight: bold;
-        }
-
-        /* Hero */
-        .hero {
-            padding: 40px 20px;
-            text-align: center;
-        }
-        .hero h2 {
-            font-size: 36px;
-            color: #09EFFF;
-            margin: 0;
-        }
-        .hero p {
-            font-size: 16px;
-            margin-top: 5px;
-        }
-
-        /* Cards */
-        .cards-section {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 40px;
-            padding: 40px;
-        }
-       #menu {
+    /* Navigation */
+    #menu {
         background: #000000;
         border-radius: 5px;
     }
@@ -180,6 +20,7 @@
         display: flex;
         gap: 20px;
         align-items: center;
+        justify-content: flex-end;
     }
     #menu li {
         position: relative;
@@ -214,9 +55,93 @@
     #menu li:hover ul.sub-menus {
         display: block;
     }
+    #menu input, #menu label {
+        display: none;
+    }
+
+    /* Header */
+    .header {
+        background-color: #000000;
+        display: flex;
+        align-items: center;
+        padding: 0 20px;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+    .logo {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+    }
+    .logo img {
+        height: 50px;
+        width: 50px;
+        border-radius: 50%;
+    }
+    .logo p {
+        color: #ffffff;
+        margin: 0;
+        font-size: 1.2em;
+        font-weight: bold;
+    }
+
+    /* Hero */
+    .hero {
+        padding: 40px 20px;
+        text-align: center;
+    }
+    .hero h2 {
+        font-size: 36px;
+        color: #09EFFF;
+        margin: 0;
+    }
+    .hero p {
+        font-size: 16px;
+        margin-top: 5px;
+    }
+
+    /* Cards Section */
+    .cards-section {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+        gap: 20px;
+        padding: 20px;
+    }
+    .place-card {
+        background: #111;
+        padding: 15px;
+        border-radius: 10px;
+    }
+    .place-card img {
+        width: 100%;
+        height: auto;
+        border-radius: 10px;
+        display: block;
+    }
+    .place-card h3 {
+        color: #09EFFF;
+        margin: 10px 0;
+    }
+    .place-card p {
+        color: #ffffff;
+        font-size: 14px;
+        line-height: 1.5;
+    }
+
+    /* Footer */
+    .footer {
+        background-color: #000000;
+        color: #ffffff;
+        text-align: center;
+        padding: 20px;
+        width: 100%;
+    }
+
+    /* Mobile Styles */
     @media screen and (max-width: 800px) {
         #menu ul {
             flex-direction: column;
+            align-items: flex-start;
             background: #343434;
             display: none;
             padding: 10px;
@@ -228,76 +153,52 @@
             cursor: pointer;
             font-size: 24px;
             color: #FFFFFF;
+            padding: 10px;
         }
         #menu input:checked ~ ul {
             display: flex;
         }
-        .content {
-            flex-direction: column;
-            text-align: center;
-            gap: 20px;
+        .hero h2 {
+            font-size: 28px;
         }
-        .content h1 {
-            font-size: 36px;
-        }
-        .hero-image img {
-            width: 200px;
-            height: 200px;
+        .hero p {
+            font-size: 14px;
         }
     }
-        .place-card h3 {
-            color: #09EFFF;
-            margin: 10px 0;
-        }
-        .place-card p {
-            color: #ffffff;
-            font-size: 14px;
-            line-height: 1.5;
-        }
+</style>
 
-        /* Footer */
-        .footer {
-            background-color: #000000;
-            color: #ffffff;
-            text-align: center;
-            padding: 20px;
-            width: 100%;
-        }
-    </style>
-</head>
-<body>
-    <div class="header">  
-        <div class="logo">
-            <img src="Images/sample.jpg" alt="Logo">
-            <p>Explore Bharat</p>
-        </div>
-        <nav id='menu'>
-            <input type='checkbox' id='responsive-menu'><label for="responsive-menu"></label>
-            <ul>
-                <li><a href='index.html'>Home</a></li>
-                <li><a href='About.html'>About</a></li>
-                <li><a href='Contact.html'>Contact Us</a></li>
-                <li><a href='HeritageSites.html'>Heritage Sites</a></li>
-                <li><a class='dropdown-arrow' href='ExploreStates.html'>Explore States</a>
-                    <ul class='sub-menus'>
-                        <li><a href='Maharashtra.html'>Maharashtra</a></li>
-                        <li><a href='Rajasthan.html'>Rajasthan</a></li>
-                        <li><a href='Goa.html'>Goa</a></li>
-                        <li><a href='Uttarakhand.html'>Uttarakhand</a></li>
-                        <li><a href='Punjab.html'>Punjab</a></li>
-                        <li><a href='Delhi.html'>Delhi</a></li>
-                        <li><a href='Gujrat.html'>Gujrat</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </nav>
+<!-- Example HTML structure -->
+<div class="header">  
+    <div class="logo">
+        <img src="Images/sample.jpg" alt="Logo">
+        <p>Explore Bharat</p>
     </div>
-    <hr>
-    <section class="hero">
-        <h2>Ahmedabad</h2>
-        <p>~A city of textiles, temples, and timeless charm.</p>
-    </section>
+    <nav id='menu'>
+        <input type='checkbox' id='responsive-menu'><label for="responsive-menu">☰</label>
+        <ul>
+            <li><a href='index.html'>Home</a></li>
+            <li><a href='About.html'>About</a></li>
+            <li><a href='Contact.html'>Contact Us</a></li>
+            <li><a href='HeritageSites.html'>Heritage Sites</a></li>
+            <li><a class='dropdown-arrow' href='ExploreStates.html'>Explore States</a>
+                <ul class='sub-menus'>
+                    <li><a href='Maharashtra.html'>Maharashtra</a></li>
+                    <li><a href='Rajasthan.html'>Rajasthan</a></li>
+                    <li><a href='Goa.html'>Goa</a></li>
+                    <li><a href='Uttarakhand.html'>Uttarakhand</a></li>
+                    <li><a href='Punjab.html'>Punjab</a></li>
+                    <li><a href='Delhi.html'>Delhi</a></li>
+                    <li><a href='Gujrat.html'>Gujrat</a></li>
+                </ul>
+            </li>
+        </ul>
+    </nav>
+</div>
 
+<section class="hero">
+    <h2>Ahmedabad</h2>
+    <p>~A city of textiles, temples, and timeless charm.</p>
+</section>
     <div class="place-card">
             <img src="Images/SabarmatiAshram.webp" alt="Sabarmati Ashram">
             <h3>Sabarmati Ashram: The Heart of the Freedom Struggle</h3>
@@ -620,5 +521,6 @@
     </footer>
 </body>
 </html>
+
 
 
