--- a/Ajmer.html
+++ b/Ajmer.html
@@ -196,8 +196,8 @@
 </div>
 
 <section class="hero">
-    <h2>Ahmedabad</h2>
-    <p>~A city of textiles, temples, and timeless charm.</p>
+    <h2>Ajmer</h2>
+    <p>~Where spirituality and history intertwine in the heart of Rajasthan.</p>
 </section>
     <div class="cards-section" id="heritage-cards">
         <!-- Tourist places in Ajmer -->
@@ -453,5 +453,6 @@
 </body>
 
 </html>
+
 
 
