--- a/Ahmedabad.html
+++ b/Ahmedabad.html
@@ -1,4 +1,9 @@
-<style>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title><style>
     body {
         background-color: #000000;
         color: #ffffff;
@@ -521,6 +526,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
