--- a/Uttarakhand.html
+++ b/Uttarakhand.html
@@ -218,8 +218,8 @@
 
   <script>
     const data = [
-      { name: "Dehradun", city: "Dehradun", img: "Images/Dehradun.jpg", info: "Capital city nestled in the Doon Valley.", link: "Dehradun.html" },
-      { name: "Haridwar", city: "Haridwar", img: "Images/Haridwar.webp", info: "Famous for Ganga Aarti and spiritual energy.", link: "Haridwar.html" },
+      { name: "Dehradun", city: "Dehradun", img: "Images/Dehradun.jpg", info: "Capital city nestled in the Doon Valley.", link: "dehradun.html" },
+      { name: "Haridwar", city: "Haridwar", img: "Images/Haridwar.webp", info: "Famous for Ganga Aarti and spiritual energy.", link: "haridwar.html" },
       { name: "Rishikesh", city: "Rishikesh", img: "Images/Rishikesh.jpg", info: "Yoga capital of the world by the Ganges.", link: "Rishikesh.html" },
       { name: "Nainital", city: "Nainital", img: "Images/Nainital.jpg", info: "Scenic lake town surrounded by hills.", link: "Nainital.html" },
       { name: "Mussoorie", city: "Mussoorie", img: "Images/Mussoorie.pg.jpg", info: "Queen of Hills with colonial charm.", link: "Mussoorie.html" },
@@ -262,4 +262,5 @@
 </body>
 
 </html>
+
 
