--- a/Contact.html
+++ b/Contact.html
@@ -273,10 +273,11 @@
     </div>
 </section>
     <footer>
-        <p>&copy; 2025 Explore Bharat. All rights reserved.</p>
+        <p>Explore Bharat &copy; 2025</p>
     </footer>
 </body>
 </html>
+
 
 
 
