--- a/index.html
+++ b/index.html
@@ -198,7 +198,8 @@
         </div>
     </section>
     <footer>
-        <p>&copy; 2023 Explore Bharat. All rights reserved.</p>
+        <p>Explore Bharat &copy; 2025</p>
     </footer>
 </body>
 </html>
+
