--- a/Contact.html
+++ b/Contact.html
@@ -273,10 +273,11 @@
     </div>
 </section>
     <footer>
-        <p>Explore Bharat &copy; 2025</p>
+        <center><p>Explore Bharat &copy; 2025</p></center>
     </footer>
 </body>
 </html>
+
 
 
 
