--- a/Agra.html
+++ b/Agra.html
@@ -274,6 +274,32 @@
   </style>
 </head>
 <body>
+  <div class="header">  
+    <div class="logo">
+        <img src="Images/sample.jpg" alt="Logo">
+        <p>Explore Bharat</p>
+    </div>
+    <nav id='menu'>
+        <input type='checkbox' id='responsive-menu'><label for="responsive-menu">☰</label>
+        <ul>
+            <li><a href='index.html'>Home</a></li>
+            <li><a href='About.html'>About</a></li>
+            <li><a href='Contact.html'>Contact Us</a></li>
+            <li><a href='HeritageSites.html'>Heritage Sites</a></li>
+            <li><a class='dropdown-arrow' href='ExploreStates.html'>Explore States</a>
+                <ul class='sub-menus'>
+                    <li><a href='Maharashtra.html'>Maharashtra</a></li>
+                    <li><a href='Rajasthan.html'>Rajasthan</a></li>
+                    <li><a href='Goa.html'>Goa</a></li>
+                    <li><a href='Uttarakhand.html'>Uttarakhand</a></li>
+                    <li><a href='Punjab.html'>Punjab</a></li>
+                    <li><a href='Delhi.html'>Delhi</a></li>
+                    <li><a href='Gujrat.html'>Gujrat</a></li>
+                </ul>
+            </li>
+        </ul>
+    </nav>
+</div>
   <div class="overlay">
     <div class="container">
       <h1>Agra Fort</h1>
@@ -331,4 +357,5 @@
   </div>
 </body>
 </html>
+
 
